fixed dispaly on iphone se

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,7 +23,7 @@ body {
 }
 .btn {
 	background-color: transparent;
-	border-radius: 10px;
+	border-radius: 1rem;
 	border: none;
 	cursor: pointer;
 	text-align: center;
@@ -32,8 +32,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 280px;
-	height: 520px;
+	width: 34rem;
+	height: 63rem;
 	overflow: hidden;
 	box-shadow: 2px 2px 3px #023780;
 	background-color: $main-color;
@@ -100,15 +100,17 @@ body {
 	margin: 0.5rem 1rem;
 
 	.task-name {
-		font-size: 1.4rem;
+		font-size: 2rem;
 		width: 70%;
 		text-align: left;
+		overflow: hidden;
+		overflow-wrap: break-word;
 	}
 	.task-btn {
 		width: 10%;
-		font-size: 1rem;
+		font-size: 1.6rem;
 		margin-left: 0.1rem;
-		padding: 3px;
+		padding: 0.5rem;
 	}
 	.done {
 		color: green;
@@ -134,3 +136,4 @@ body {
 .task-done {
 	text-decoration: line-through;
 }
+
